Berdly City encounter: Fix ending link

--- a/encounters/berdlycybercity.html
+++ b/encounters/berdlycybercity.html
@@ -337,5 +337,5 @@ toc:
 <section class="d-section" id="end">
 	<h2>End of fight</h2>
 
-	<p>Upon reaching 100% <span class="yellow">Mercy</span>, <a href="{{ '/chapters/chapter2/secondalleyway#postfightnormal' | relative_url }}">the encounter immediately ends</a>.</p>
+	<p>Upon reaching 100% <span class="yellow">Mercy</span>, <a href="{{ '/chapters/chapter2/secondalleyway#postfight-nonfatal' | relative_url }}">the encounter immediately ends</a>.</p>
 </section>
