Maus encounter: Fix TrapAll's enemy list
Applies to all enemies, not just Maice/Tasques

--- a/encounters/maus.html
+++ b/encounters/maus.html
@@ -301,7 +301,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 	<d-box theme="battlemenu">
 		<d-text asterisk>Press [MENU] to trap all the enemies!</d-text>
 	</d-box>
-	<p class="note">All Maice (and Tasques) move back and forth at the center of the screen. A cage at the top of the screen also goes back and forth but at a different speed. [MENU] must be pressed to drop the cage at the right time, catching the enemies.</p>
+	<p class="note">All enemies move back and forth at the center of the screen. A cage at the top of the screen also goes back and forth but at a different speed. [MENU] must be pressed to drop the cage at the right time, catching the enemies.</p>
 
 	<h4>Caught one enemy</h4>
 	<d-box theme="battlemenu">
