Document Mauswheel encounter

--- a/encounters/index.html
+++ b/encounters/index.html
@@ -131,7 +131,10 @@ items:
           -
             url: tasquemanager
             name: Tasque Manager
-          # Mauswheel, Werewerewire, Spamton NEO, Queen, GIGA Queen
+          -
+            url: mauswheel
+            name: Mauswheel
+          # Werewerewire, Queen, GIGA Queen
           -
             url: pipis
             name: Pipis
