Document Sweet Cap'n Cakes encounter

--- a/encounters/index.html
+++ b/encounters/index.html
@@ -96,7 +96,9 @@ items:
           -
             url: virovirokun
             name: Virovirokun
-          # Sweet Cap'n Cakes
+          -
+            url: sweetcapncakes
+            name: Sweet Cap'n Cakes
           -
             url: berdlycyberfield
             name: Berdly (first encounter, on rollercoasters)
