Adjust placement/sizing for small d-box
- Push place=left boxes further to the side after asterisk-texts and sprites, to prevent overlap
- Increase height for parent d-box on small screens

--- a/encounters/kroundcardcastle.html
+++ b/encounters/kroundcardcastle.html
@@ -130,7 +130,7 @@ toc:
 	<d-box theme="dark">
 		<d-sprite speaker="Ralsei" variant="hat" emotion="3"></d-sprite>
 		<d-text asterisk>But its CROWN looks different!</d-text>
-		<d-box place="center-x">
+		<d-box place="left">
 			<d-sprite speaker="Susie" variant="noeyes" emotion="6"></d-sprite>
 			<d-text asterisk>... it looks the same.</d-text>
 		</d-box>
@@ -153,7 +153,7 @@ toc:
 	<d-box theme="dark">
 		<d-sprite speaker="Ralsei" variant="hat" emotion="3"></d-sprite>
 		<d-text asterisk>It looks like it's in pain!!</d-text>
-		<d-box place="center-x">
+		<d-box place="left">
 			<d-sprite speaker="Susie" variant="noeyes" emotion="7"></d-sprite>
 			<d-text asterisk>IT LOOKS THE SAME!!!!</d-text>
 		</d-box>
