Document Legend of Tenna FT, Shadowguy encounter

--- a/encounters/index.html
+++ b/encounters/index.html
@@ -154,11 +154,34 @@ items:
     name: Chapter 3
     sublist:
       -
+        url: legendoftenna
+        name: Legend of Tenna encounters
+      -
+        name: Desert Board
+        sublist:
+          -
+            url: shadowguy
+            name: Shadowguy
+          # Lanino/Elnina
+      -
+        name: Island Board
+        sublist:
+          # Pippins, Shuttah
+      -
         name: Green Room
         sublist:
+          # Watercooler, Zapper
           -
             url: shadowmantleholder
             name: Shadow Mantle holder
+      -
+        name: TV World
+        sublist:
+          # Tenna (first fight), Ribbick, Rouxls Kaard
+      -
+        name: Cold Place
+        sublist:
+          # Tenna (second fight), Roaring Knight
   -
     id: other
     name: Other
