Document Ch2 Acid Tunnel scene/Rouxls encounter

--- a/encounters/index.html
+++ b/encounters/index.html
@@ -136,6 +136,9 @@ items:
           -
             url: mauswheel
             name: Mauswheel
+          -
+            url: rouxlsch2
+            name: Rouxls Kaard (first encounter, house-capturing game)
           # Werewerewire, Queen, GIGA Queen
           -
             url: pipis
