Fix unconverted &-breaks

--- a/encounters/rabbick.html
+++ b/encounters/rabbick.html
@@ -193,7 +193,7 @@ encounters 16/17/24/32; 24 is unused
 	<h2>Check</h2>
 	<d-box theme="battlemenu">
 		<d-text asterisk>RABBICK - AT 8 DF 1</d-text>
-		<d-text asterisk>This dusty bunny needs a bit&  of spring cleaning.</d-text>
+		<d-text asterisk>This dusty bunny needs a bit<span class="break"></span> of spring cleaning.</d-text>
 	</d-box>
 </section>
 
