Document Castle Town cafe

--- a/locations/closetworld/index.html
+++ b/locations/closetworld/index.html
@@ -15,6 +15,9 @@ items:
       -
         url: seap
         name: Seam's shop
+      -
+        url: cafe
+        name: Café
   -
     url: castle
     name: Ralsei's castle
