Cafe: Add source for jukebox

--- a/locations/closetworld/town/cafe.html
+++ b/locations/closetworld/town/cafe.html
@@ -24,6 +24,10 @@ sources:
     name: gml_GlobalScript_scr_text
     chapters: [2, 4]
     note: counter-manning interactions
+  -
+    name: gml_Object_obj_readable_room1_Other_10
+    chapters: [2]
+    note: jukebox interaction
 
 toc:
   -
