Document Queen (& Berdly) encounter

--- a/encounters/index.html
+++ b/encounters/index.html
@@ -139,7 +139,11 @@ items:
           -
             url: rouxlsch2
             name: Rouxls Kaard (first encounter, house-capturing game)
-          # Werewerewire, Queen, GIGA Queen
+          # Werewerewire
+          -
+            url: queen
+            name: Queen (with Berdly)
+          # GIGA Queen
           -
             url: pipis
             name: Pipis
