King encounter: Fix DualHeal effect
Heal amount is based only on Ralsei's Magic stat, not the target's

--- a/encounters/king.html
+++ b/encounters/king.html
@@ -528,7 +528,7 @@ toc:
 	<d-box theme="battlemenu">
 		<d-text asterisk>Your SOUL shined its power on RALSEI!</d-text>
 	</d-box>
-	<p class="note">Ralsei heals all party members for 4 times their respective Magic stat.</p>
+	<p class="note">Ralsei heals all party members for 4 times his Magic stat.</p>
 </section>
 
 <section class="d-section" id="dialogue">
