--- a/locations/cyberworld/index.html
+++ b/locations/cyberworld/index.html
@@ -27,4 +27,8 @@ items:
   -
     url: queenmansion
     name: Queen's Mansion
+    sublist:
+      -
+        url: basement
+        name: Basement
 ---
