Document Knight encounter

--- a/encounters/index.html
+++ b/encounters/index.html
@@ -188,7 +188,10 @@ items:
       -
         name: Cold Place
         sublist:
-          # Tenna (second fight), Roaring Knight
+          # Tenna (second fight)
+          -
+            url: knight
+            name: Roaring Knight
   -
     id: other
     name: Other
