Document Balthizard encounter

--- a/encounters/index.html
+++ b/encounters/index.html
@@ -193,6 +193,26 @@ items:
             url: knight
             name: Roaring Knight
   -
+    id: chapter4
+    name: Chapter 4
+    sublist:
+      -
+        name: Dark Sanctuary
+        sublist:
+          # Guei
+          -
+            url: balthizard
+            name: Balthizard
+          # Bibliox, Jackenstein, Mizzle, Miss Mizzle, Hammer of Justice
+      -
+        name: 2nd Sanctuary
+        sublist:
+          # Winglade, Organikk, Wicabel, Sound of Justice
+      -
+        name: 3rd Sanctuary
+        sublist:
+          # Titan Spawn, Titan
+  -
     id: other
     name: Other
     sublist:
