Document Bibliox encounter

--- a/encounters/index.html
+++ b/encounters/index.html
@@ -203,7 +203,10 @@ items:
           -
             url: balthizard
             name: Balthizard
-          # Bibliox, Jackenstein, Mizzle, Miss Mizzle, Hammer of Justice
+          -
+            url: bibliox
+            name: Bibliox
+          # Jackenstein, Mizzle, Miss Mizzle, Hammer of Justice
       -
         name: 2nd Sanctuary
         sublist:
