Document Mizzle encounter

--- a/encounters/index.html
+++ b/encounters/index.html
@@ -206,7 +206,11 @@ items:
           -
             url: bibliox
             name: Bibliox
-          # Jackenstein, Mizzle, Miss Mizzle, Hammer of Justice
+          # Jackenstein
+          -
+            url: mizzle
+            name: Mizzle
+          # Miss Mizzle, Hammer of Justice
       -
         name: 2nd Sanctuary
         sublist:
