Document Jackenstein encounter

--- a/encounters/index.html
+++ b/encounters/index.html
@@ -206,7 +206,9 @@ items:
           -
             url: bibliox
             name: Bibliox
-          # Jackenstein
+          -
+            url: jackenstein
+            name: Jackenstein
           -
             url: mizzle
             name: Mizzle
