Document Titan Spawn encounter

--- a/encounters/index.html
+++ b/encounters/index.html
@@ -220,7 +220,10 @@ items:
       -
         name: 3rd Sanctuary
         sublist:
-          # Titan Spawn, Titan
+          -
+            url: titanspawn
+            name: Titan Spawn
+          # Titan
   -
     id: other
     name: Other
