Separate party dojo challenges from regular encounters

--- a/encounters/index.html
+++ b/encounters/index.html
@@ -231,12 +231,14 @@ items:
       -
         name: Party Dojo
         sublist:
+          # Jigsaw Joe, Graze Challenge 1
           -
             url: cloverdojo
             name: Clover Rematch
           -
             url: tasquemanagerdojo
             name: Tasque Manager Says
+          # Ch2 All Stars, Lanino&Elnina
       -
         name: Unused
         sublist:
