Power menu: Reorder headings
Instead of splitting by chapter and THEN title/stat etc, split by title/stat etc and THEN chapter

--- a/misc/powermenu.html
+++ b/misc/powermenu.html
@@ -23,9 +23,8 @@ or do we want to save that for a separate page...?
 <section class="d-section" id="kris">
 	<h2>Kris</h2>
 
-	<h3 id="kris1">Chapter 1</h3>
-
-	<h4>Title</h4>
+	<h3 id="kristitle">Titles</h3>
+	<h4 id="kristitle1">Chapter 1</h4>
 	<h5 id="lv1human">Initial</h5>
 	<d-box theme="powertitle">
 		<d-text>LV1 Human</d-text>
@@ -44,17 +43,9 @@ or do we want to save that for a separate page...?
 		<d-text>Inspects all beds<span class="break"></span> inexplicably.</d-text>
 	</d-box>
 
-	<h4>Stats</h4>
+	<hr class="hr2">
 
-	<p>2% chance of "Dog: [spr_dog_sleep]"; 98% chance of ???</p>
-	<p>???</p>
-	<p>Guts: 1</p>
-
-	<hr>
-
-	<h3 id="kris2">Chapter 2</h3>
-
-	<h4>Title</h4>
+	<h4 id="kristitle2">Chapter 2</h4>
 	<p>The LV value is 2 at the start of the chapter and changes to 3 after the Cyber World's Dark Fountain is sealed. It is represented by a "#" in this section.</p>
 
 	<h5 id="lv2leader">Initial</h5>
@@ -88,17 +79,9 @@ or do we want to save that for a separate page...?
 		<d-text>Commands.</d-text>
 	</d-box>
 
-	<h4>Stats</h4>
+	<hr class="hr2">
 
-	<p>96% chance of ???; 4% chance of "Dog: [spr_dog_sleep]"</p>
-	<p>???</p>
-	<p>Guts: 2</p>
-
-	<hr>
-
-	<h3 id="kris3">Chapter 3</h3>
-
-	<h4>Title</h4>
+	<h4 id="kristitle3">Chapter 3</h4>
 
 	<h5 id="lv3tactician">Initial</h5>
 	<d-box theme="powertitle">
@@ -141,17 +124,9 @@ or do we want to save that for a separate page...?
 		<d-text>LV3 Enjoying<span class="break"></span> the youthful<span class="break"></span> days.</d-text>
 	</d-box>
 
-	<h4>Stats</h4>
+	<hr class="hr2">
 
-	<p>96% chance of ???; 4% chance of "Dog: [spr_dog_sleep]"</p>
-	<p>If made any kills on sword route, *: Sword route kill count, clamped to 0 and 9999; otherwise ???</p>
-	<p>Guts: 2</p>
-
-	<hr>
-
-	<h3 id="kris4">Chapter 4</h3>
-
-	<h4>Title</h4>
+	<h4 id="kristitle4">Chapter 4</h4>
 
 	<h5 id="lv4darkhero">Initial</h5>
 	<d-box theme="powertitle">
@@ -171,8 +146,25 @@ or do we want to save that for a separate page...?
 		<d-text>Broken off,<span class="break"></span> but still locked.</d-text>
 	</d-box>
 
-	<h4>Stats</h4>
+	<hr>
 
+	<h3 id="krisstat">Stats</h3>
+	<h4 id="krisstat1">Chapter 1</h4>
+	<p>2% chance of "Dog: [spr_dog_sleep]"; 98% chance of ???</p>
+	<p>???</p>
+	<p>Guts: 1</p>
+
+	<h4 id="krisstat2">Chapter 2</h4>
+	<p>96% chance of ???; 4% chance of "Dog: [spr_dog_sleep]"</p>
+	<p>???</p>
+	<p>Guts: 2</p>
+
+	<h4 id="krisstat3">Chapter 3</h4>
+	<p>96% chance of ???; 4% chance of "Dog: [spr_dog_sleep]"</p>
+	<p>If made any kills on sword route, *: Sword route kill count, clamped to 0 and 9999; otherwise ???</p>
+	<p>Guts: 2</p>
+
+	<h4 id="krisstat4">Chapter 4</h4>
 	<p>???</p>
 	<p>4% chance of "Dog: [spr_dog_sleeping]"; otherwise, Slain: # or Purify: # if you've encountered the titan spawn; otherwise ???</p>
 	<p>Guts: 3</p>
@@ -182,9 +174,8 @@ or do we want to save that for a separate page...?
 <section class="d-section" id="susie">
 	<h2>Susie</h2>
 
-	<h3 id="susie1">Chapter 1</h3>
-
-	<h4>Title</h4>
+	<h3 id="susietitle">Titles</h3>
+	<h4 id="susietitle1">Chapter 1</h4>
 	<h5 id="lv1meangirl">Initial</h5>
 	<d-box theme="powertitle">
 		<d-text>LV1 Mean Girl</d-text>
@@ -197,17 +188,9 @@ or do we want to save that for a separate page...?
 		<d-text>Does damage using<span class="break"></span> dark energy.</d-text>
 	</d-box>
 
-	<h4>Stats</h4>
+	<hr class="hr2">
 
-	<p>Rudeness: 100 before sparing Lancer; 99 after sparing Lancer</p>
-	<p>Crudeness: 100 if not picked $!$? Squad as team name; 101 if you did</p>
-	<p>Guts: 2</p>
-
-	<hr>
-
-	<h3 id="susie2">Chapter 2</h3>
-
-	<h4>Title</h4>
+	<h4 id="susietitle2">Chapter 2</h4>
 	<p>The LV value is 2 at the start of the chapter and changes to 3 after the Cyber World's Dark Fountain is sealed. It is represented by a "#" in this section.</p>
 
 	<h5 id="lv2darkknight">Initial</h5>
@@ -228,17 +211,9 @@ or do we want to save that for a separate page...?
 		<d-text>Supports those<span class="break"></span> that find moss.</d-text>
 	</d-box>
 
-	<h4>Stats</h4>
+	<hr class="hr2">
 
-	<p>Rudeness: 89</p>
-	<p>Purple: Yes</p>
-	<p>Guts: 2</p>
-
-	<hr>
-
-	<h3 id="susie3">Chapter 3</h3>
-
-	<h4>Title</h4>
+	<h4 id="susietitle3">Chapter 3</h4>
 
 	<h5 id="lv3darkknight">Initial</h5>
 	<d-box theme="powertitle">
@@ -252,17 +227,9 @@ or do we want to save that for a separate page...?
 		<d-text>Participates in<span class="break"></span> occult ACTs.</d-text>
 	</d-box>
 
-	<h4>Stats</h4>
+	<hr class="hr2">
 
-	<p>Rudeness: 100</p>
-	<p>Plucked: # of times grass plucked, clamped to 0 and 99; if 0, instead shows ???</p>
-	<p>Guts: 3</p>
-
-	<hr>
-
-	<h3 id="susie4">Chapter 4</h3>
-
-	<h4>Title</h4>
+	<h4 id="susietitle4">Chapter 4</h4>
 
 	<h5 id="lv4darkherosus">Initial</h5>
 	<d-box theme="powertitle">
@@ -276,8 +243,25 @@ or do we want to save that for a separate page...?
 		<d-text>Faces fate<span class="break"></span> with the blade.</d-text>
 	</d-box>
 
-	<h4>Stats</h4>
+	<hr>
 
+	<h3 id="susiestat">Stats</h3>
+	<h4 id="susiestat1">Chapter 1</h4>
+	<p>Rudeness: 100 before sparing Lancer; 99 after sparing Lancer</p>
+	<p>Crudeness: 100 if not picked $!$? Squad as team name; 101 if you did</p>
+	<p>Guts: 2</p>
+
+	<h4 id="susiestat2">Chapter 2</h4>
+	<p>Rudeness: 89</p>
+	<p>Purple: Yes</p>
+	<p>Guts: 2</p>
+
+	<h4 id="susiestat3">Chapter 3</h4>
+	<p>Rudeness: 100</p>
+	<p>Plucked: # of times grass plucked, clamped to 0 and 99; if 0, instead shows ???</p>
+	<p>Guts: 3</p>
+
+	<h4 id="susiestat4">Chapter 4</h4>
 	<p>Rudeness: 100</p>
 	<p>Healcount calculated by formula (5 times Susie.Magic) + 15 + (2 times (ultrahealuses capped at 15)), or if won against Gerson then (10 times Susie.Magic) + (2 times (ultrahealuses capped at 15)); this stat displays as ??? if healcount is 0, otherwise Healing: healcount</p>
 	<p>Guts: 4</p>
@@ -287,9 +271,8 @@ or do we want to save that for a separate page...?
 <section class="d-section" id="ralsei">
 	<h2>Ralsei</h2>
 
-	<h3 id="ralsei1">Chapter 1</h3>
-
-	<h4>Title</h4>
+	<h3 id="ralseititle">Titles</h3>
+	<h4 id="ralseititle1">Chapter 1</h4>
 	<h5 id="lv1lonelyprince">Initial</h5>
 	<d-box theme="powertitle">
 		<d-text>LV1 Lonely Prince</d-text>
@@ -308,17 +291,9 @@ or do we want to save that for a separate page...?
 		<d-text>Weak, but has nice<span class="break"></span> healing powers.</d-text>
 	</d-box>
 
-	<h4>Stats</h4>
+	<hr class="hr2">
 
-	<p>98% chance of Kindness: 100; 2% chance of Dogness: 1</p>
-	<p>Fluffiness: 1 (2 if equipped Dainty Scarf)</p>
-	<p>Guts: 0</p>
-
-	<hr>
-
-	<h3 id="ralsei2">Chapter 2</h3>
-
-	<h4>Title</h4>
+	<h4 id="ralseititle2">Chapter 2</h4>
 	<p>The LV value is 2 at the start of the chapter and changes to 3 after the Cyber World's Dark Fountain is sealed. It is represented by a "#" in this section.</p>
 
 	<h5 id="lv2darkprince">Initial</h5>
@@ -351,17 +326,9 @@ or do we want to save that for a separate page...?
 		<d-text>Doesn't even<span class="break"></span> have a photo.</d-text>
 	</d-box>
 
-	<h4>Stats</h4>
+	<hr class="hr2">
 
-	<p>Sweetness: 97</p>
-	<p>Fluffiness: 2</p>
-	<p>Guts: 0</p>
-
-	<hr>
-
-	<h3 id="ralsei3">Chapter 3</h3>
-
-	<h4>Title</h4>
+	<h4 id="ralseititle3">Chapter 3</h4>
 
 	<h5 id="lv3darkprince1">Initial</h5>
 	<d-box theme="powertitle">
@@ -393,17 +360,9 @@ or do we want to save that for a separate page...?
 		<d-text>Dark-World being.<span class="break"></span> Has friends.</d-text>
 	</d-box>
 
-	<h4>Stats</h4>
+	<hr class="hr2">
 
-	<p>Carried: # of times Ralsei got picked up, clamped to 0 and 99; if 0, instead shows ???</p>
-	<p>Fluffiness: 1</p>
-	<p>Guts: 1</p>
-
-	<hr>
-
-	<h3 id="ralsei4">Chapter 4</h3>
-
-	<h4>Title</h4>
+	<h4 id="ralseititle4">Chapter 4</h4>
 
 	<h5 id="lv4darkheroral">Initial</h5>
 	<d-box theme="powertitle">
@@ -417,8 +376,25 @@ or do we want to save that for a separate page...?
 		<d-text>Boy with stool<span class="break"></span> like abilities.</d-text>
 	</d-box>
 
-	<h4>Stats</h4>
+	<hr>
 
+	<h3 id="ralseistat">Stats</h3>
+	<h4 id="ralseistat1">Chapter 1</h4>
+	<p>98% chance of Kindness: 100; 2% chance of Dogness: 1</p>
+	<p>Fluffiness: 1 (2 if equipped Dainty Scarf)</p>
+	<p>Guts: 0</p>
+
+	<h4 id="ralseistat2">Chapter 2</h4>
+	<p>Sweetness: 97</p>
+	<p>Fluffiness: 2</p>
+	<p>Guts: 0</p>
+
+	<h4 id="ralseistat3">Chapter 3</h4>
+	<p>Carried: # of times Ralsei got picked up, clamped to 0 and 99; if 0, instead shows ???</p>
+	<p>Fluffiness: 1</p>
+	<p>Guts: 1</p>
+
+	<h4 id="ralseistat4">Chapter 4</h4>
 	<p>???</p>
 	<p>Fluffiness: 1</p>
 	<p>Guts: 0</p>
@@ -428,9 +404,8 @@ or do we want to save that for a separate page...?
 <section class="d-section" id="noelle">
 	<h2>Noelle</h2>
 
-	<h3 id="noelle2">Chapter 2</h3>
-
-	<h4>Title</h4>
+	<h3 id="noelletitle">Titles</h3>
+	<h4 id="noelletitle2">Chapter 2</h4>
 
 	<h5 id="lv1snowcaster">Initial</h5>
 	<d-box theme="powertitle">
@@ -456,8 +431,10 @@ or do we want to save that for a separate page...?
 		<d-text>Neither chaotic nor<span class="break"></span> lawful to moss.</d-text>
 	</d-box>
 
-	<h4>Stats</h4>
+	<hr>
 
+	<h3 id="noellestat">Stats</h3>
+	<h4 id="noellestat2">Chapter 2</h4>
 	<p>Coldness: minimum 47, increases by 7 for each use of IceShock up to a maximum of 100</p>
 	<p>Boldness: formula is <code>-12 + ((global.plot - 70) * 3) => (global.plot * 3) - 222</code>, clamped at 100 but it never gets that high</p>
 	<ul>
