Power menu: Add ToC, stat dividers

--- a/misc/powermenu.html
+++ b/misc/powermenu.html
@@ -9,6 +9,284 @@ sources:
     chapters: [1, 2, 3, 4]
 credits: >
   <p>Compiled by wovenstarlight.</p>
+toc:
+  -
+    id: kris
+    name: Kris
+    subheadings:
+      -
+        id: kristitle
+        name: Titles
+        subheadings:
+          -
+            id: kristitle1
+            name: Chapter 1
+            subheadings:
+              -
+                id: lv1human
+                name: Initial
+              -
+                id: lv1leader
+                name: After Ralsei joins the party
+              -
+                id: lv1bedinspector
+                name: After inspecting all 4 beds in Hathy's room in Card Castle
+          -
+            id: kristitle2
+            name: Chapter 2
+            subheadings:
+              -
+                id: lv2leader
+                name: Initial
+              -
+                id: lv2tactician
+                name: After Susie and Ralsei learn S-Action/R-Action
+              -
+                id: lv2bedinspector
+                name: After inspecting all beds in Castle Town and Noelle's bed in Queen's Mansion
+              -
+                id: lv2mossfinder
+                name: After finding the moss in Cyber City
+              -
+                id: lv2leaderweird
+                name: After starting the Weird Route
+          -
+            id: kristitle3
+            name: Chapter 3
+            subheadings:
+              -
+                id: lv3tactician
+                name: Initial
+              -
+                id: lv3director
+                name: After escaping Tenna
+              -
+                id: lv3mossmystery
+                name: After finding the moss on Board 2
+              -
+                id: lv3blazer
+                name: After finishing Sword Route's Board 1
+              -
+                id: lv3iceblazer
+                name: After finishing Sword Route's Board 2
+              -
+                id: lv3sheath
+                name: After beating the Shadow Mantle Holder
+              -
+                id: lv3egg
+                name: After finding the Egg
+          -
+            id: kristitle4
+            name: Chapter 4
+            subheadings:
+              -
+                id: lv4darkhero
+                name: Initial
+              -
+                id: lv4mossmost
+                name: After finding all moss in this and previous chapters
+              -
+                id: lv4darkbead
+                name: If on the Weird Route
+      -
+        id: krisstat
+        name: Stats
+        subheadings:
+          -
+            id: krisstat1
+            name: Chapter 1
+          -
+            id: krisstat2
+            name: Chapter 2
+          -
+            id: krisstat3
+            name: Chapter 3
+          -
+            id: krisstat4
+            name: Chapter 4
+  -
+    id: susie
+    name: Susie
+    subheadings:
+      -
+        id: susietitle
+        name: Titles
+        subheadings:
+          -
+            id: susietitle1
+            name: Chapter 1
+            subheadings:
+              -
+                id: lv1meangirl
+                name: Initial
+              -
+                id: lv1darkknight
+                name: After sparing Lancer
+          -
+            id: susietitle2
+            name: Chapter 2
+            subheadings:
+              -
+                id: lv2darkknight
+                name: Initial
+              -
+                id: lv2healingmaster
+                name: After Ralsei teaches Susie healing
+              -
+                id: lv2mossenjoyer
+                name: If you find the moss with Susie in the party
+          -
+            id: susietitle3
+            name: Chapter 3
+            subheadings:
+              -
+                id: lv3darkknight
+                name: Initial
+              -
+                id: lv3darkactorsus
+                name: After escaping Tenna
+          -
+            id: susietitle4
+            name: Chapter 4
+            subheadings:
+              -
+                id: lv4darkherosus
+                name: Initial
+              -
+                id: lv4axeofjustice
+                name: After obtaining the Justice Axe
+      -
+        id: susiestat
+        name: Stats
+        subheadings:
+          -
+            id: susiestat1
+            name: Chapter 1
+          -
+            id: susiestat2
+            name: Chapter 2
+          -
+            id: susiestat3
+            name: Chapter 3
+          -
+            id: susiestat4
+            name: Chapter 4
+  -
+    id: ralsei
+    name: Ralsei
+    subheadings:
+      -
+        id: ralseititle
+        name: Titles
+        subheadings:
+          -
+            id: ralseititle1
+            name: Chapter 1
+            subheadings:
+              -
+                id: lv1lonelyprince
+                name: Initial
+              -
+                id: lv1pricklyprince
+                name: While Ragger is equipped
+              -
+                id: lv1fluffyprince
+                name: While Dainty Scarf is equipped
+          -
+            id: ralseititle2
+            name: Chapter 2
+            subheadings:
+              -
+                id: lv2darkprince
+                name: Initial
+              -
+                id: lv2hugprince
+                name: If Kris hugged Ralsei during the photo
+              -
+                id: lv2poseprince
+                name: If Kris made a peace sign during the photo
+              -
+                id: lv2rudeprince
+                name: If Kris made a rude gesture during the photo
+              -
+                id: lv2blankprince
+                name: If Kris didn't pose for the photo
+          -
+            id: ralseititle3
+            name: Chapter 3
+            subheadings:
+              -
+                id: lv3darkprince1
+                name: Initial
+              -
+                id: lv3darkactorral
+                name: After escaping Tenna
+              -
+                id: lv3horse
+                name: After the second cowboy minigame, while Ralsei's still wearing the horse costume
+              -
+                id: lv3exhorse
+                name: After Ralsei takes off the horse costume
+              -
+                id: lv3darkprince2
+                name: After fighting Tenna
+          -
+            id: ralseititle4
+            name: Chapter 4
+            subheadings:
+              -
+                id: lv4darkheroral
+                name: Initial
+              -
+                id: lv4stoolboy
+                name: While in the bookshelf room outside the old man's study, after Ralsei executes Magical Stool Forme R
+      -
+        id: ralseistat
+        name: Stats
+        subheadings:
+          -
+            id: ralseistat1
+            name: Chapter 1
+          -
+            id: ralseistat2
+            name: Chapter 2
+          -
+            id: ralseistat3
+            name: Chapter 3
+          -
+            id: ralseistat4
+            name: Chapter 4
+  -
+    id: noelle
+    name: Noelle
+    subheadings:
+      -
+        id: noelletitle
+        name: Titles
+        subheadings:
+          -
+            id: noelletitle2
+            name: Chapter 2
+            subheadings:
+              -
+                id: lv1snowcaster
+                name: Initial
+              -
+                id: lv2frostmancer
+                name: After using IceShock for the first time
+              -
+                id: lv2icetrancer
+                name: While ThornRing is equipped
+              -
+                id: lv2mossneutral
+                name: If you find the moss while Noelle is in the party, and you aren't on the Weird Route
+      -
+        id: noellestat
+        name: Stats
+        subheadings:
+          -
+            id: noellestat2
+            name: Chapter 2
 ---
 {% comment %}
 GATHERED THE DATA!! just gotta figure out how to format this as an HTML page
@@ -154,15 +432,21 @@ or do we want to save that for a separate page...?
 	<p>???</p>
 	<p>Guts: 1</p>
 
+	<hr class="hr2">
+
 	<h4 id="krisstat2">Chapter 2</h4>
 	<p>96% chance of ???; 4% chance of "Dog: [spr_dog_sleep]"</p>
 	<p>???</p>
 	<p>Guts: 2</p>
 
+	<hr class="hr2">
+
 	<h4 id="krisstat3">Chapter 3</h4>
 	<p>96% chance of ???; 4% chance of "Dog: [spr_dog_sleep]"</p>
 	<p>If made any kills on sword route, *: Sword route kill count, clamped to 0 and 9999; otherwise ???</p>
 	<p>Guts: 2</p>
+
+	<hr class="hr2">
 
 	<h4 id="krisstat4">Chapter 4</h4>
 	<p>???</p>
@@ -251,15 +535,21 @@ or do we want to save that for a separate page...?
 	<p>Crudeness: 100 if not picked $!$? Squad as team name; 101 if you did</p>
 	<p>Guts: 2</p>
 
+	<hr class="hr2">
+
 	<h4 id="susiestat2">Chapter 2</h4>
 	<p>Rudeness: 89</p>
 	<p>Purple: Yes</p>
 	<p>Guts: 2</p>
 
+	<hr class="hr2">
+
 	<h4 id="susiestat3">Chapter 3</h4>
 	<p>Rudeness: 100</p>
 	<p>Plucked: # of times grass plucked, clamped to 0 and 99; if 0, instead shows ???</p>
 	<p>Guts: 3</p>
+
+	<hr class="hr2">
 
 	<h4 id="susiestat4">Chapter 4</h4>
 	<p>Rudeness: 100</p>
@@ -384,15 +674,21 @@ or do we want to save that for a separate page...?
 	<p>Fluffiness: 1 (2 if equipped Dainty Scarf)</p>
 	<p>Guts: 0</p>
 
+	<hr class="hr2">
+
 	<h4 id="ralseistat2">Chapter 2</h4>
 	<p>Sweetness: 97</p>
 	<p>Fluffiness: 2</p>
 	<p>Guts: 0</p>
 
+	<hr class="hr2">
+
 	<h4 id="ralseistat3">Chapter 3</h4>
 	<p>Carried: # of times Ralsei got picked up, clamped to 0 and 99; if 0, instead shows ???</p>
 	<p>Fluffiness: 1</p>
 	<p>Guts: 1</p>
+
+	<hr class="hr2">
 
 	<h4 id="ralseistat4">Chapter 4</h4>
 	<p>???</p>
